# canary

./: .gitignore
Canary/: CMakeLists.txt
Canary/src/: PluginEditor.cpp  PluginProcessor.h
ChordVocoder/: CMakeLists.txt
ChordVocoder/src/: PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h
Docs/: CLAUDE.md  chord-vocoder-project-outline.md
Docs/.planning/: REQUIREMENTS.md  ROADMAP.md  STATE.md
Docs/.planning/phases/01-plugin-scaffold-and-sidechain-validation/: .continue-here.md  01-01-SUMMARY.md  01-VALIDATION.md  01-VERIFICATION.md
Docs/.planning/research/: FEATURES.md  PITFALLS.md  SUMMARY.md
docs/: .gitignore
docs/.planning/: HANDOFF.json  PROJECT.md  REQUIREMENTS.md  ROADMAP.md
docs/.planning/phases/01-plugin-scaffold-and-sidechain-validation/: 01-01-PLAN.md  01-01-SUMMARY.md  01-02-PLAN.md  01-02-SUMMARY.md  01-RESEARCH.md
docs/.planning/research/: ARCHITECTURE.md  STACK.md
src/: PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h
